// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<button
  onClick={[Function]}
>
  button
</button>
`;

exports[`Button 2`] = `
<button
  onClick={[Function]}
>
  Submit!!!
</button>
`;
